Add weather-yrendy.js Svitlana block

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="#about-us">About Us</a>
                     <a href="#catalog">Catalog</a>
                     <a href="#collection__header">Collection</a>
-                    <a href="#">Contact us</a>   
+                    <a href="#">Contact us</a>
                 </nav>
                 <!-- Roman Hrytsyshyn Burger Menu start -->
                 <div class="header__burger" id="header__burger">
@@ -143,45 +143,46 @@
                                     <h5 class="why_choose_us__slogan__name">We create each outfit for you with great
                                         love and care.
                                     </h5>
-                                <div class="why_choose_us__list-box">
-                                    <h4 class="why_choose_us__list-box__title"><span
-                                            class="why_choose_us__dash">—</span>Jolly brand is:</h4>
-                                    <ol class="why_choose_us__text__list">
-                                        <li class="why_choose_us__text__list__item">
-                                            Capsule collections you can wear on any occasion;
-                                        </li>
-                                        <li class="why_choose_us__text__list__item">
-                                            Only high quality and eco-friendly materials;
-                                        </li>
-                                        <li class="why_choose_us__text__list__item">
-                                            A great variety of outfits for every taste and size.
-                                        </li>
-                                    </ol>
-                                </div>
-                                <div class="why_choose_us__paragraf-box">
-                                    <p class="why_choose_us__paragraph">
-                                        We know the main problem of all women – a lot of clothes in the wardrobe but
-                                        nothing to wear. Therefore, we develop capsule collections where clothes go well
-                                        with each other. You can mix them as well to create stunning new looks!</p>
-                                </div>
-                                <div class="why_choose_us__button">
-                                    <div class="why_choose_us__button__container">
-                                        <div class="why_choose_us__button__inner">
-                                            <a class="why_choose_us__button__button"><span
-                                                    class="why_choose_us__button__text"> Learn More +
-                                            </a>
+                                    <div class="why_choose_us__list-box">
+                                        <h4 class="why_choose_us__list-box__title"><span
+                                                class="why_choose_us__dash">—</span>Jolly brand is:</h4>
+                                        <ol class="why_choose_us__text__list">
+                                            <li class="why_choose_us__text__list__item">
+                                                Capsule collections you can wear on any occasion;
+                                            </li>
+                                            <li class="why_choose_us__text__list__item">
+                                                Only high quality and eco-friendly materials;
+                                            </li>
+                                            <li class="why_choose_us__text__list__item">
+                                                A great variety of outfits for every taste and size.
+                                            </li>
+                                        </ol>
+                                    </div>
+                                    <div class="why_choose_us__paragraf-box">
+                                        <p class="why_choose_us__paragraph">
+                                            We know the main problem of all women – a lot of clothes in the wardrobe but
+                                            nothing to wear. Therefore, we develop capsule collections where clothes go
+                                            well
+                                            with each other. You can mix them as well to create stunning new looks!</p>
+                                    </div>
+                                    <div class="why_choose_us__button">
+                                        <div class="why_choose_us__button__container">
+                                            <div class="why_choose_us__button__inner">
+                                                <a class="why_choose_us__button__button"><span
+                                                        class="why_choose_us__button__text"> Learn More +
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="container" id="container">
-                                    <div class="circle"></div>
-                                    <p id="text"></p>
-                                    <div class="pointer-container">
-                                      <span class="pointer"></span>
+                                    <div class="container" id="container">
+                                        <div class="circle"></div>
+                                        <p id="text"></p>
+                                        <div class="pointer-container">
+                                            <span class="pointer"></span>
+                                        </div>
+                                        <div class="gradient-circle"></div>
                                     </div>
-                                    <div class="gradient-circle"></div>
-                                  </div>
-                            </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -189,6 +190,7 @@
             </div>
         </section>
         <!--Svitlana Stasiuk block end-->
+
 
         <!--Ruslan block start-->
         <div class="catalog">
@@ -203,10 +205,11 @@
                 </p>
             </div>
             <div class="catalog__all_body">
-                <button class="catalog__all_body_button_back"><</button>   
-                <div class="catalog__body">
-                </div>
-                <button class="catalog__all_body_button_forward">></button>  
+                <button class="catalog__all_body_button_back">
+                    << /button>
+                        <div class="catalog__body">
+                        </div>
+                        <button class="catalog__all_body_button_forward">></button>
             </div>
         </div>
         <!--Ruslan block end-->
@@ -324,47 +327,86 @@
                 </div>
             </div>
         </div>
-      </div>
-    </div>
-    <!-- Sofiia block end-->
+        </div>
+        </div>
+        <!-- Sofiia block end-->
 
         <!--Svitlana Stasiuk block start-->
         <section class="trendy">
-          <div class="trendy__background">
-              <div class="trendy__container" id="trendy">
-                  <div class="trendy__container__inner">
-                      <div class="trendy__container__inner__grid">
-                          <div class="trendy__container__emply"></div>
-                          <div class="trendy__container__inner__grid__top">
-                              <div class="trendy__title-box">
-                                  <h2 class="trendy__title__name">TRENDY</h2>
-                              </div>
-                              <div class="trendy__subtitle-box">
-                                  <h3 class="trendy__subtitle__name"><span
-                                          class="trendy__dash">—</span> SPRING COLLECTION.
-                                  </h3>
-                              </div>
-                              <div class="trendy__button">
-                                  <div class="trendy__button__container">
-                                      <div class="trendy__button__inner">
-                                          <a   href="#" class="trendy__button__button"><span
-                                                  class="trendy__button__learn-more-button-black"> Learn More +
-                                          </a>
-                                          <a href="#" class="trendy__shop-now-button-white">
-                                              Shop Now +
-                                          </a>
-                                      </div>
-                                    </div>  
-                                  </div>
-                                  <div class="trendy__clock__box clock"></div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </section>
-      <!--Svitlana Stasiuk block end-->
+            <div class="trendy__background">
+                <div class="trendy__container" id="trendy">
+                    <div class="trendy__container__inner">
+                        <div class="trendy__container__inner__grid">
+                            <div class="trendy__container__emply"></div>
+                            <div class="trendy__container__inner__grid__top">
+                                <div class="trendy__title-box">
+                                    <h2 class="trendy__title__name">TRENDY</h2>
+                                </div>
+                                <div class="trendy__subtitle-box">
+                                    <h3 class="trendy__subtitle__name"><span class="trendy__dash">—</span> SPRING
+                                        COLLECTION.
+                                    </h3>
+                                </div>
+                                <div class="trendy__button">
+                                    <div class="trendy__button__container">
+                                        <div class="trendy__button__inner">
+                                            <a href="#" class="trendy__button__button"><span
+                                                    class="trendy__button__learn-more-button-black"> Learn More +
+                                            </a>
+                                            <a href="#" class="trendy__shop-now-button-white">
+                                                Shop Now +
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="trendy__clock__box clock"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="trendy__main">
+                    <h6>Your Weather</h6>
+                    <div class="trendy__visual-only" aria-hidden="true">
+                        <div id="trendy__quick-view">
+                            <div id="trendy__weather-icons">
+                                <i class="trendy__wi"></i>
+                                <i class="trendy__wi"></i>
+                            </div>
+                            <div id="trendy__loading">
+                                Loading<span>.</span><span>.</span><span>.</span>
+                            </div>
+                            <span id="trendy__tempF" class="trendy__show">
+                                <span></span>
+                                <i class='trendy__wi wi-fahrenheit'></i>
+                            </span>
+                            <span id="trendy__tempC" class="hide">
+                                <span></span>
+                                <i class='wi wi-celsius'></i>
+                            </span>
+                        </div>
+                        <div id="trendy__grid">
+                            <div id="trendy__location">…</div>
+                            <div id="trendy__status">…</div>
+                            <div id="trendy__wind">
+                                <span class="trendy__compass">
+                                    <i class="trendy__wi">…</i>
+                                </span>
+                                <span id="trendy__miles" class="trendy__show">
+                                </span>
+                                <span id="trendy__meters" class="trendy__hide">
+                                </span>
+                            </div>
+                        </div>
+                        <button class="trendy__weather__button">F / C</button>
+                    </div>
+                    <p class="trendy__visually-hidden">
+                        Weather data currently unavailable.
+                    </p>
+                </div>
+            </div>
+            </div>
+        </section>
+        <!--Svitlana Stasiuk block end-->
 
         <!-- Sofiia block presentation start -->
         <section class="presentation">
@@ -400,21 +442,23 @@
 
         <!-- Roman Hrytsyshyn HTML Block 2 Start -->
         <section class="collection">
-          <div class="collection__block">
-           <div class="collection__header" id="collection__header">
-             <h2 class="collection__header-text">COLLECTION</h2>
-             <h3 class="collection__slogan"><span class="collection__slogan-dash">—</span> Select Your <br class="new-line"/> Perfect Look.</h3>
-             <p class="collection__description">Check out our new capsule collection and add items you like the most to the shopping cart!</p>
-           </div>
-           <div class="cards__carousel">
-             <button class="cards__carousel-back">ᐸ</button>
-             <div class="cards__carousel-slide-container"></div>
-             <button class="cards__carousel-forward">ᐳ</button>
-          </div>
-           <section class="collection__cards" id="no-display"></section>
-         </div>
+            <div class="collection__block">
+                <div class="collection__header" id="collection__header">
+                    <h2 class="collection__header-text">COLLECTION</h2>
+                    <h3 class="collection__slogan"><span class="collection__slogan-dash">—</span> Select Your <br
+                            class="new-line" /> Perfect Look.</h3>
+                    <p class="collection__description">Check out our new capsule collection and add items you like the
+                        most to the shopping cart!</p>
+                </div>
+                <div class="cards__carousel">
+                    <button class="cards__carousel-back">ᐸ</button>
+                    <div class="cards__carousel-slide-container"></div>
+                    <button class="cards__carousel-forward">ᐳ</button>
+                </div>
+                <section class="collection__cards" id="no-display"></section>
+            </div>
         </section>
-          <!-- Roman Hrytsyshyn HTML Block 2 End -->
+        <!-- Roman Hrytsyshyn HTML Block 2 End -->
 
 
         <!--Roman Fedoriv start block -->
@@ -469,20 +513,24 @@
                         </div>
                         <form class="form__container__inputs" action="https://formspree.io/f/myyoejyq" method="POST">
                             <div class="form__input__name input__container">
-                                <input name ="name"type="text" class="input__name input__style" placeholder="Your Name*" required>                                
+                                <input name="name" type="text" class="input__name input__style" placeholder="Your Name*"
+                                    required>
                             </div>
                             <span class="count__test"></span>
                             <div class="form__input__phone input__container">
-                                <input name = "phone"type="tel" class="input__phone input__style"placeholder="Phone number*"required>
+                                <input name="phone" type="tel" class="input__phone input__style"
+                                    placeholder="Phone number*" required>
                             </div>
                             <div class="form__input__email input__container">
-                                <input name = "email"type="email" class="input__email input__style"placeholder="Email*"required>
+                                <input name="email" type="email" class="input__email input__style" placeholder="Email*"
+                                    required>
                             </div>
                             <div class="form__input__comment">
-                                <textarea name = "comment" type="text" class="input__comment input__style" maxlength="2000"placeholder="Your massage"></textarea>
+                                <textarea name="comment" type="text" class="input__comment input__style"
+                                    maxlength="2000" placeholder="Your massage"></textarea>
                             </div>
                             <div class="form__container__button">
-                                <input class="form__button" type="submit" value = "Request a quote +">
+                                <input class="form__button" type="submit" value="Request a quote +">
                             </div>
                         </form>
                         <p class="contact-form-status"></p>
@@ -493,13 +541,14 @@
         <!--Roman Fedoriv end block -->
     </main>
 
-  <footer></footer>
-  <script src="js/collections-carousel.js"></script>
-  <script src='js/collections-cards.js'></script>
-  <script src="js/customization-form.js"></script>
-  <script src="js/relaxes-why_choose.js"></script>
-  <script src="js/clock-trendy.js"></script>
-  <script src="js/catalog-carousel.js"></script>
+    <footer></footer>
+    <script src="js/collections-carousel.js"></script>
+    <script src='js/collections-cards.js'></script>
+    <script src="js/customization-form.js"></script>
+    <script src="js/relaxes-why_choose.js"></script>
+    <script src="js/clock-trendy.js"></script>
+    <script src="js/catalog-carousel.js"></script>
+    <script src="js/weather-trendy.js"></script>
 </body>
 
 </html>
