Maked customization-form responsive

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                             </div>
                             <div class="form__input__comment">
                                 <textarea name="comment" type="text" class="input__comment input__style"
-                                    maxlength="2000" placeholder="Your massage"></textarea>
+                                    maxlength="2000" placeholder="Your message"></textarea>
                             </div>
                             <div class="form__container__button">
                                 <input class="form__button" type="submit" value="Request a quote +">
