Added burger container html

--- a/index.html
+++ b/index.html
@@ -22,12 +22,22 @@
                 <nav class="header__nav">
                     <a href="#about-us">About Us</a>
                     <a href="#catalog">Catalog</a>
-                    <a href="#collection__header">Collection</a>
+                    <a href="#collection__block">Collection</a>
                     <a href="#">Contact us</a>
                 </nav>
                 <!-- Roman Hrytsyshyn Burger Menu start -->
-                <div class="header__burger" id="header__burger">
-                    <a href="#" class="header__burger-logo" id="header__burger-logo">☰</a>
+                <div class="burger__container">
+                    <div class="header__burger" id="header__burger">
+                        <a href="#" class="header__burger-logo" id="header__burger-logo">☰</a>
+                    </div>
+                    <div class="burger__wrapper">
+                        <nav class="burger__navigation-menu-points">
+                            <a href="#about-us" class="burger__nav-link burger__about-us">About Us</a>
+                            <a href="#catalog" class="burger__nav-link burger__catalog">Catalog</a>
+                            <a href="#collection__block" class="burger__nav-link burger__collection">Collection</a>
+                            <a href="#" class="burger__nav-link burger__contact-us">Contact us</a>
+                        </nav>
+                    </div>
                 </div>
                 <!-- Burger Menu end -->
             </div>
