Aded countdown Svitlana block

--- a/index.html
+++ b/index.html
@@ -357,6 +357,14 @@
                                         COLLECTION.
                                     </h3>
                                 </div>
+                                <div class="countdown">
+                                    <div class="countdown-item">
+                                        <svg viewBox="0 0 120 120" class="countdown__content">
+                                            <text id="countdown__days" data-unit="days" x="50%" y="50%"
+                                                  class="style-countdown"></text>
+                                            <text x="50%" y="50%" dy="23" class="countdown-text">Days</text>
+                                        </svg>
+                                    </div>
                                 <div class="trendy__button">
                                     <div class="trendy__button__container">
                                         <div class="trendy__button__inner">
@@ -369,7 +377,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="trendy__clock__box clock"></div>
+                                <div class="trendy__box__clock">
+                                <div class="trendy__clock clock"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -519,6 +529,7 @@
     <script src="js/relaxes-why_choose.js"></script>
     <script src="js/clock-trendy.js"></script>
     <script src="js/catalog-carousel.js"></script>
+    <script src="js/countdown.js"></script>
   </body>
 
 </html>
