Created new gallery-section, add html and css for mobile version

--- a/index.html
+++ b/index.html
@@ -341,6 +341,29 @@
         </div>
         <!-- Sofiia block end-->
 
+        <!--Roman Fedoriv start block -->
+        <section class="gallery">
+            <div class="gallery__inner-container">
+                <div class="gallery__title"><h2 class="gallery__title__name">GALLERY</h2></div>
+                <div class="gallery__subtitle"><h3 class="gallery__subtitle__name"><span class="gallery__subtitle__dash">
+                    — </span>Trendy Looks of Your Spring</h3></div>
+                <div class="gallery__text"><p class="gallery__text__paragraph"> Stay playful and romantic this spring with the new collection by Jolly House.</p></div>
+                <div class="gallery__images-container">
+                    <div class="gallery__inner-left__images-container">
+                    <div class="gallery__image-container"> <img src="img/gallery/women-1.png" alt="" class="gallery__image"> </div>
+                    <div class="gallery__image-container"> <img src="img/gallery/women-2.png" alt="" class="gallery__image"> </div>
+                    <div class="gallery__image-container"> <img src="img/gallery/women-3.png" alt="" class="gallery__image"> </div>
+                  </div>  
+                  <div class="gallery__inner-right__images-container">
+                    <div class="gallery__image-container"> <img src="img/gallery/women-4.png" alt="" class="gallery__image"> </div>
+                    <div class="gallery__image-container"> <img src="img/gallery/women-5.png" alt="" class="gallery__image"> </div>
+                    <div class="gallery__image-container"> <img src="img/gallery/women-6.png" alt="" class="gallery__image"> </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Roman Fedoriv end block -->
+
         <!--Svitlana Stasiuk block start-->
         <section class="trendy">
             <div class="trendy__background">
