--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <nav class="header__nav">
                     <a href="#about-us">About Us</a>
                     <a href="#catalog">Catalog</a>
-                    <a href="#collection__block">Collection</a>
-                    <a href="#">Contact us</a>
+                    <a href="#collection">Collection</a>
+                    <a href="#form__title">Contact us</a>
                 </nav>
                 <!-- Roman Hrytsyshyn Burger Menu start -->
                 <div class="header__burger" id="header__burger">
@@ -35,8 +35,8 @@
                         <nav class="burger__navigation-menu-points">
                             <a href="#about-us" class="burger__nav-link burger__about-us">About Us</a>
                             <a href="#catalog" class="burger__nav-link burger__catalog">Catalog</a>
-                            <a href="#collection__block" class="burger__nav-link burger__collection">Collection</a>
-                            <a href="#" class="burger__nav-link burger__contact-us">Contact us</a>
+                            <a href="#collection__header" class="burger__nav-link burger__collection">Collection</a>
+                            <a href="#form__title" class="burger__nav-link burger__contact-us">Contact us</a>
                         </nav>
                     </div>
                 </div>    
