--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
                                     <h2 class="trendy__title__name">TRENDY</h2>
                                 </div>
                                 <div class="trendy__subtitle-box">
-                                    <h3 class="trendy__subtitle__name"><span class="trendy__dash">—</span> SPRING
-                                        COLLECTION.
+                                    <h3 class="trendy__subtitle__name"><span class="trendy__dash">—</span> <span id = 'dynamic-text'>SPRING
+                                        COLLECTION.</span>
                                     </h3>
                                 </div>
                                     <div class="trendy__countdown">
@@ -581,6 +581,7 @@
     <script src="js/catalog-carousel.js"></script>
     <script src="js/header-burger.js"></script>
     <script src="js/countdown.js"></script>
+    <script src="js/dynamic-text.js"></script>
   </body>
 
 </html>
