Changed button Svitlana block

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                     <div class="why_choose_us__button">
                                         <div class="why_choose_us__button__container">
                                             <div class="why_choose_us__button__inner">
-                                                <a class="why_choose_us__button__button"><span
+                                                <a href="#history"class="why_choose_us__button__button"><span
                                                         class="why_choose_us__button__text"> Learn More +
                                                 </a>
                                             </div>
@@ -270,7 +270,7 @@
         <!--block end Tanya-->
 
         <!-- Sofiia block history start-->
-        <div class="history">
+        <div class="history" id="history">
             <div class="history__header">
                 <h2 class="history__header-top-row">HISTORY</h2>
                 <div class="history__clock"></div>
@@ -414,10 +414,10 @@
                             <div class="trendy__button">
                                 <div class="trendy__button__container">
                                     <div class="trendy__button__inner">
-                                        <a href="#" class="trendy__button__button"><span
+                                        <a href="#presentation" class="trendy__button__button"><span
                                                     class="trendy__button__learn-more-button-black"> Learn More +
                                             </a>
-                                        <a href="#" class="trendy__shop-now-button-white">
+                                        <a href="#collection_header" class="trendy__shop-now-button-white">
                                                 Shop Now +
                                             </a>
                                     </div>
@@ -432,7 +432,7 @@
         <!--Svitlana Stasiuk block end-->
 
         <!-- Sofiia block presentation start -->
-        <section class="presentation">
+        <section class="presentation" id="presentation">
             <div class="presentation__background">
                 <div class="presentaion__container">
                     <div class="presentation__text">
