Edded accesories-clock

--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
         <section class="accessories">
             <div class="accessories__first">
                 <div class="accessories__description">
+                    <!--time-->
+                    <div class="accessories__clock"></div> 
                     <h2 class="accessories__text">ACCESSORIES</h2>
                     <h3 class="accessories__title"><span> — </span> Treat Yourself to New Accessories.</h3>
                     <p class="accessories__about">
@@ -616,6 +618,7 @@
     <script src="js/dynamic-text.js"></script>
     <script src="js/history-clock.js"></script>
     <script src="js/gallery-modal-carousel.js"></script>
+    <script src="js/accessories-clock.js"></script>
 </body>
 
 </html>
