Improved carousel arrow-icons style

--- a/index.html
+++ b/index.html
@@ -383,13 +383,13 @@
                     </div>
                     <div class="gallery-carousel__inner-container">
                     <div class="gallery-carousel__images-back">
-                        <button class="btn-back">←</button>
+                        <button class="btn-back">&#129120;</button>
                     </div>
                     <div class="gallery-carousel__images">
                         
                     </div>
                     <div class="gallery-carousel__images-forward">
-                        <button class="btn-forward">→</button>
+                        <button class="btn-forward">&#129122;</button>
                     </div>                
                 </div>
                 </div>
