corrected Catalog block and catalog.css for buttons

--- a/index.html
+++ b/index.html
@@ -216,11 +216,10 @@
                 </p>
             </div>
             <div class="catalog__all_body">
-                <button class="catalog__all_body_button_back">
-                    << /button>
-                        <div class="catalog__body">
-                        </div>
-                        <button class="catalog__all_body_button_forward">></button>
+                <button class="catalog__all_body_button_back">ᐸ</button>
+                <div class="catalog__body">
+                </div>
+                <button class="catalog__all_body_button_forward">ᐳ</button>
             </div>
         </div>
         <!--Ruslan block end-->
