some correction styles in Catalog block

--- a/index.html
+++ b/index.html
@@ -207,19 +207,21 @@
         <div class="catalog">
             <div class="catalog__header">
                 <h2 id="catalog" class="catalog__header__title">CATALOG</h2>
+                <br>
                 <h3 class="catalog__header__annotation">
-                    <span>-</span>Designer Clothes for Every Taste.
+                    <span class="dash">— </span>Designer Clothes for Every Taste.
                 </h3>
+                <br>
                 <p>
                     We create fashion clothes that are ready to wear. We love simple looks and share our vision with
                     you.
                 </p>
+                <br>
             </div>
-            <div class="catalog__all_body">
-                <button class="catalog__all_body_button_back">ᐸ</button>
-                <div class="catalog__body">
-                </div>
-                <button class="catalog__all_body_button_forward">ᐳ</button>
+            <div class="catalog__body">
+                <button class="catalog__body_button_back">ᐸ</button>
+                <div class="catalog_carousel"></div>
+                <button class="catalog__body_button_forward">ᐳ</button>
             </div>
         </div>
         <!--Ruslan block end-->
@@ -229,7 +231,7 @@
             <div class="accessories__first">
                 <div class="accessories__description">
                     <!--time-->
-                    <div class="accessories__clock"></div> 
+                    <div class="accessories__clock"></div>
                     <h2 class="accessories__text">ACCESSORIES</h2>
                     <h3 class="accessories__title"><span> — </span> Treat Yourself to New Accessories.</h3>
                     <p class="accessories__about">
@@ -383,16 +385,16 @@
                         <span class="gallery__close__icon">&times;</span>
                     </div>
                     <div class="gallery-carousel__inner-container">
-                    <div class="gallery-carousel__images-back">
-                        <button class="btn-back">&#129120;</button>
+                        <div class="gallery-carousel__images-back">
+                            <button class="btn-back">&#129120;</button>
+                        </div>
+                        <div class="gallery-carousel__images">
+
+                        </div>
+                        <div class="gallery-carousel__images-forward">
+                            <button class="btn-forward">&#129122;</button>
+                        </div>
                     </div>
-                    <div class="gallery-carousel__images">
-                        
-                    </div>
-                    <div class="gallery-carousel__images-forward">
-                        <button class="btn-forward">&#129122;</button>
-                    </div>                
-                </div>
                 </div>
             </div>
         </section>
