Changed position trendy block

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                                         <a href="#presentation" class="trendy__button__button"><span
                                                 class="trendy__button__learn-more-button-black"> Learn More +
                                         </a>
-                                        <a href="#collection_header" class="trendy__shop-now-button-white">
+                                        <a href="#collection__header" class="trendy__shop-now-button-white">
                                             Shop Now +
                                         </a>
                                     </div>
