added closed tag /span to 184 line

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                         <div class="why_choose_us__button__container">
                                             <div class="why_choose_us__button__inner">
                                                 <a href="#history" class="why_choose_us__button__button"><span
-                                                        class="why_choose_us__button__text"> Learn More +
+                                                        class="why_choose_us__button__text"> Learn More +</span>
                                                 </a>
                                             </div>
                                         </div>
