--- a/index.html
+++ b/index.html
@@ -345,8 +345,6 @@
                 </div>
             </div>
         </div>
-        </div>
-        </div>
         <!-- Sofiia block end-->
 
         <!--Roman Fedoriv start block -->
@@ -461,7 +459,7 @@
                                 <div class="trendy__button__container">
                                     <div class="trendy__button__inner">
                                         <a href="#presentation" class="trendy__button__button"><span
-                                                class="trendy__button__learn-more-button-black"> Learn More +
+                                                class="trendy__button__learn-more-button-black"> Learn More +</span>
                                         </a>
                                         <a href="#collection__header" class="trendy__shop-now-button-white">
                                             Shop Now +
@@ -472,7 +470,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
             </div>
         </section>
         <!--Svitlana Stasiuk block end-->
@@ -557,7 +554,7 @@
                                         <div class="customization__button__inner">
                                             <button class="customization__button__button"><span
                                                     class="customization__button__text"> Request a
-                                                    Quote +</button>
+                                                    Quote +</span></button>
                                         </div>
                                     </div>
                                 </div>
