--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                                     required>
                             </div>
                             <div class="form__input__comment">
-                                <textarea name="comment" type="text" class="input__comment input__style"
+                                <textarea name="comment" class="input__comment input__style"
                                     maxlength="2000" placeholder="Your message"></textarea>
                             </div>
 
